--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-router-dom": "^4.2.2",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "ava": "^0.25.0",
@@ -49,7 +49,7 @@
     "postcss-url": "^7.3.2",
     "style-loader": "^0.21.0",
     "webpack": "^4.12.0",
-    "webpack-cli": "^2.1.4",
+    "webpack-cli": "^3.1.1",
     "webpack-dev-server": "^3.1.4",
     "webpack-merge": "^4.1.2"
   },
