--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.1.6",
     "ava": "^0.25.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
@@ -25,7 +26,6 @@
     "babel-plugin-transform-require-ignore": "^0.1.1",
     "babel-plugin-webpack-alias": "^2.1.2",
     "babel-preset-env": "^1.7.0",
-    "babel-preset-es2017": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "clean-webpack-plugin": "^0.1.19",
